bin/testsuite/tests/compiler/src/errors/compiler2617.swg
#global testerror "Err0201"

#[Swag.NoCopy]
struct AA {}

impl AA
{
    func opPostCopy(me) {}
}
